syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.example.grpc";
package org.example.grpc;

message StreamingFrame {
  bytes content = 1;
}

message StreamingFrameResponse {
  bytes content = 1;
}

service StreamingService {
  rpc streamToServer(stream StreamingFrame) returns (stream StreamingFrameResponse);
}
